Sat Apr 15 14:05:09 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* alpha-tdep.c (alpha_push_arguments): Fix typo (TYPE_VALUE ->
	VALUE_TYPE).  Do the cast for TYPE_CODE_BOOL, TYPE_CODE_CHAR,
	TYPE_CODE_ENUM, and TYPE_CODE_RANGE as well as TYPE_CODE_INT.

Sat Apr 15 14:04:32 1995  Per Bothner  <bothner@cygnus.com>

	* alpha-tdep.c (alpha_push_arguments): Only cast to long for
	TYPE_CODE_INT.

start-sanitize-gdbtk
Sat Apr 15 13:52:24 1995  Stan Shebs  <shebs@andros.cygnus.com>

	* gdbtk.c (gdb_disassemble): Read from inferior if connected
	to a VxWorks target.

Fri Apr 14 10:18:20 1995  Stu Grossman  (grossman@cygnus.com)

	* README.GDBTK:  New file.  Contains the obvious.
end-sanitize-gdbtk

Thu Apr 13 16:17:04 1995  Rob Savoye  <rob@darkstar.cygnus.com>

	* remote-array.c: New file for Array Tech LSI33k based controller
	board.

Thu Apr 13 12:23:31 1995  Kung Hsu  <kung@rtl.cygnus.com>

	* a29k-tdep.c (get_longjmp_target): Replace SWAP_TARGET_AND_HOST with
	extract_address.
	* remote-vxsparc.c: New file, preliminary check in, this configuration
	not supported yet. 
	* remote-vxmips.c: ditto.

Thu Apr 13 12:10:14 1995  Michael Meissner  <meissner@tiktok.cygnus.com>

	* rs6000-tdep.c (xcoff_add_toc_to_loadinfo): Don't use a prototype
	to declare the function.

Wed Apr 12 16:40:20 1995  Stan Shebs  <shebs@andros.cygnus.com>

	* monitor.h (init_monitor_ops): Declare.
	* rom68k-rom.c: Clarify some comments.
	(rom68k_open): Define as static, to match decl.

Wed Apr 12 16:36:44 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* gdb.gdb: New file.
	* .gdbinit: Move list-objfiles to gdb.gdb.

	* values.c (set_internalvar): Set modifiable flag of newval.

Wed Apr 12 14:34:31 1995  Jim Kingdon  <kingdon@deneb.cygnus.com>

	* xcoffread.c: Call complain() rather than error() or printing a
	warning.

start-sanitize-arc
Wed Apr 12 08:15:27 1995  Doug Evans  <dje@canuck.cygnus.com>

	* arc-tdep.c: #include "gdbcmd.h".
	(codestream_seek): Pass CORE_ADDR.