@@ -1,3 +1,9 @@
+Sat Apr 15 14:15:14 1995  Stan Shebs  <shebs@andros.cygnus.com>
+
+	* mpw-make.in (init.c): Don't try to do symbolic {o} in sed
+	command, not allowed by some version of MPW Make.
+	* ser-mac.c (mac-setbaudrate): Make it actually set baud rates.
+
 Sat Apr 15 14:05:09 1995  Jim Kingdon  (kingdon@lioth.cygnus.com)
 
 	* alpha-tdep.c (alpha_push_arguments): Fix typo (TYPE_VALUE ->
